25 October 2007
+ Fixed text_only template. Missing closing </div>
+ Updated: templates/page_templates/text_only/page.tpl

Version 1.0.4
-----------------------------------------------------------------
18 October 2007
+ Fixed pagesmith edit permission.
+ PageSmith home pages were missing edit link.

Version 1.0.3
-----------------------------------------------------------------
10 October 2007
+ Added SmartTag to page display.
+ Fixed section listing to allow a single section template
+ Added an edit link to page views beside miniadmin
+ PageSmith gives a warning if you exceed the character limit.
+ Option for PageSmith to ignore the character limit.
+ Added text_only page template.
+ Updated: conf/config.php
+ Copy: templates/page_templates/text_only/

Version 1.0.2
-----------------------------------------------------------------
17 September 2007
+ New icon
+ Fixed page title not appearing on form.
+ Fixed inability to edit a text area more than once.

12 September 2007
+ Pages pinned to front no longer flag their key.

Version 1.0.1
-----------------------------------------------------------------
10 September 2007
+ Clearing the lorum ipsum text each new page is redundant. Changed
  to only showing on new page.
+ Moved key flag above returning of cached page data.
+ Clearing cache after page edit and deletion.
+ Was using nbsp to fill blank content. This gave false positives in
  the layout. nbsp are only used now for form layout.
+ Javascript changed to add nbsp on blank entry to prevent collapsing
  forms. 
+ Added box-title and box-content divs to page templates to help with
  styling.
+ Added an error check for bad template directories.

+ Updated files: javascript/update/head.js, conf/error.php,
                 templates/page_templates/simple/page.tpl,
                 templates/page_templates/twocolumns/page.tpl

7 September 2007
+ Fixed h1 not appearing on home page.
+ Adding caching to page view.

5 September 2007